# contrastive-learning

./: .gitignore  README.ja.md  README.md  environment.yml  memo.md  pyproject.toml
docs/ja/: 設計と実験ガイド.md
docs/superpowers/plans/: 2026-07-02-hyperbolic-simcse.md
experiments/: plots.py  run.py  run_matrix.py
experiments/configs/: E1_encoder.yaml  E1_graph.yaml  E2_sweep.yaml  E4_curvature.yaml  E5_encoder_full.yaml  E6_dropout.yaml
scripts/: download_data.py
src/hypsimcse/data/: graph_stats.py  splits.py  wordnet.py
src/hypsimcse/eval/: dual_coords.py  fisher.py  hierarchy.py  inductive.py  link_prediction.py  reconstruction.py  sts.py
src/hypsimcse/geometry/: lorentz.py  scores.py
src/hypsimcse/losses/: infonce.py
src/hypsimcse/models/: encoder_model.py  graph_embedding.py  lift.py
src/hypsimcse/training/: config.py  device.py  logutil.py  trainer.py
tests/: test_dual_coords.py  test_e2e_smoke.py  test_encoder_model.py  test_fisher.py  test_graph_embedding.py  test_graph_stats.py  test_hierarchy.py  test_inductive.py  test_infonce.py  test_lift.py  test_link_prediction.py  test_lorentz.py  test_plots.py  test_reconstruction.py  test_scores.py  test_splits.py  test_sts.py  test_trainer.py  test_wordnet.py
